# cut

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.c
test_path/: stat
